--- a/dump.html
+++ b/dump.html
@@ -7,3 +7,22 @@
 
 grid-column-start: 2;
 grid-row-start: 3;
+
+
+
+        
+<div class="item">this is some stuff about me,</div>
+<div class="item">this is some stuff about me,</div>
+<div class="item">this is some stuff about me,</div>
+<div class="item">this is some stuff about me,</div>
+<div class="item">this is some stuff about me,</div>
+<div class="item">this is some stuff about me,</div>
+
+
+grid-template-columns: 25vw 25vw 25vw 25vw;
+
+
+
+
+column-gap: 10px;
+row-gap: 15px;
