--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
 </head>
 
 <body >
+    <div style="color:red;background-color:blue">otehywoterhgeiu</div>
+    <div style="background-color: coral;width: full;">test</div>
     <div class="container">
-        
-        <div class="item">this is some stuff about me,</div>
-        <div class="item">this is some stuff about me,</div>
-        <div class="item">this is some stuff about me,</div>
-        <div class="item">this is some stuff about me,</div>
-        <div class="item">this is some stuff about me,</div>
-        <div class="item">this is some stuff about me,</div>
-
+        hooray for boobies
     </div>
 </body>
 
