--- a/dump.html
+++ b/dump.html
@@ -10,19 +10,26 @@ grid-row-start: 3;
 
 
 
+font-family:MabryPro;
+font-size:50px
+
+    
+
         
-<div class="item">this is some stuff about me,</div>
-<div class="item">this is some stuff about me,</div>
-<div class="item">this is some stuff about me,</div>
-<div class="item">this is some stuff about me,</div>
-<div class="item">this is some stuff about me,</div>
-<div class="item">this is some stuff about me,</div>
 
 
-grid-template-columns: 25vw 25vw 25vw 25vw;
+background-color: red;
 
 
 
 
-column-gap: 10px;
-row-gap: 15px;
+<div class="item">this is some stuff about me,</div>
+<div class="item">photography</div>
+<div class="item">filmography</div>
+<div class="item">contact</div>
+<div class="item">store</div>
+
+
+
+
+
