--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
     <title>Document</title>
 </head>
 
-<body >
-    <div style="color:red;background-color:blue">otehywoterhgeiu</div>
-    <div style="background-color: coral;width: full;">test</div>
-    <div class="container">
-        hooray for boobies
+<body>
+    <div class="blocks">
+
+        <div class="item name">Hey,<br>I'm Logan<span style="color:white">.</span></div>
+        <div class="item empty"></div>
+        <div class="item empty"></div>
+        <div class="item empty"></div>
+
+        <div class="item empty"></div>
+        <div class="item bio">well hello there</div>
+        <div class="item empty"></div>
+        <div class="item">blog here</div>
+
+
     </div>
 </body>
 
