--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
         <div class="item name">Hey,<br>I'm Logan<span style="color:white">.</span></div>
         <div class="item empty"></div>
         <div class="item empty"></div>
-        <div class="item empty"></div>
+        <div class="item hyper">contact</div>
 
         <div class="item empty"></div>
-        <div class="item bio">well hello there</div>
+        <div class="item bio">Genius billionaire playboy philanthropist.</div>
         <div class="item empty"></div>
-        <div class="item">blog here</div>
+        <div class="item hyper">blog here</div>
+        <div class="item hyper">photo</div>
+        <div class="item hyper">film</div>
+        
+        <div class="item hyper">store</div>
+        <div class="item hyper">blender</div>
 
 
     </div>
