--- a/dump.html
+++ b/dump.html
@@ -29,6 +29,18 @@ background-color: red;
 <div class="item">store</div>
 
 
+@media (pointer:none), (pointer:coarse) {
+}
+grid-template-areas:
+    "name . . .>"
+    ". bio . blog ."
+    "photography films contact store";
+
+    //height: 100vw;
+
+
+    background-color: powderblue;
+
 
 
 
