--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="item hyper">film</div>
         
         <div class="item hyper">store</div>
-        <div class="item hyper">blender</div>
+        <div class="item hyper">3D</div>
 
 
     </div>
