--- a/index.html
+++ b/index.html
@@ -6,30 +6,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
 
 <body>
     <div class="blocks">
 
-        <div class="item name">Hey,<br>I'm Logan<span style="color:white">.</span></div>
-        <div class="item empty"></div>
-        <div class="item empty"></div>
-        <div class="item hyper">contact</div>
+        <div class="item name">Yo,<br>I'm Logan<span style="color:white">.</span></div>
+        <div class="item empty">
+            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="50" cy="50" r="50" />
+            </svg>
+        </div>
+        <div class="item hyper" onclick="location.href='contact.html';">contact</div>
+        <div class="item hyper" onclick="location.href='social.html';">social</div>
 
-        <div class="item empty"></div>
-        <div class="item bio">Genius billionaire playboy philanthropist.</div>
-        <div class="item empty"></div>
-        <div class="item hyper">blog here</div>
-        <div class="item hyper">photo</div>
-        <div class="item hyper">film</div>
-        
-        <div class="item hyper">store</div>
-        <div class="item hyper">3D</div>
+        <div class="item empty">
+            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="50" cy="50" r="50" />
+            </svg>
+        </div>
+
+        <div class="item bio">
+            <div style="position:relative;top:0;right:0;">Who am I, you say,</div>
+            <div style="position:relative;top:400px;left:0;text-align:right;">perhaps a sort of genius billionaire
+                playboy philanthropist.</div>
+        </div>
+        <div class="item empty">
+            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="50" cy="50" r="50" />
+            </svg>
+        </div>
+        <div class="item hyper blog">le blog</div>
+
+
+        <div class="item hyper" onclick="location.href='photo.html';">photo</div>
+        <div class="item hyper" onclick="location.href='film.html';">film</div>
+        <div class="item hyper" onclick="location.href='art.html';">art</div>
+        <div class="item hyper" onclick="location.href='store.html';">store</div>
+
+        <div class="item hyper" onclick="location.href='store.html';">about</div>
+        <div class="item hyper" onclick="location.href='store.html';">resumé</div>
+
 
 
     </div>
+    <div style="text-align:right;">© 2022 Logan Hillyer</div>
 </body>
 
 </html>
