--- a/dump.html
+++ b/dump.html
@@ -44,3 +44,20 @@ grid-template-areas:
 
 
 
+
+
+
+
+
+
+
+
+    
+    
+    display: flex;
+    align-items: center;
+    /* align vertical */
+
+
+
+
