--- a/film.html
+++ b/film.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <link rel="icon" href="http://example.com/favicon.png">
     <title>Document</title>
 </head>
+
 <body>
-    <div>hi!</div>
+    <div class="blocks">
+        <div class="item hyper" onclick="location.href='index.html';">home</div>
+        
+        
+
+
+    </div>
 </body>
+
 </html>
