--- a/film.html
+++ b/film.html
@@ -28,9 +28,9 @@
         </div>
 
 
-        <div class="item hyper" onclick="location.href='space.html';" style="text-align:center">Space</div>
-        <div class="item hyper" onclick="location.href='putin.html';" style="text-align:center">Putin</div>
-        <div class="item hyper" onclick="location.href='western.html';" style="text-align:center">Western</div>
+        <div class="item hyper" onclick="location.href='videos/space.html';" style="text-align:center">Space</div>
+        <div class="item hyper" onclick="location.href='videos/putin.html';" style="text-align:center">Putin</div>
+        <div class="item hyper" onclick="location.href='videos/western.html';" style="text-align:center">Western</div>
 
 
 
