--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="item pane">
             <div style="position:relative;top:0;right:0;">Who am I, you say,</div>
-            <div style="position:relative;top:400px;left:0;text-align:right;">perhaps a sort of genius billionaire
+            <div style="position:relative;top:15vw;left:0;text-align:right;">perhaps a sort of genius billionaire
                 playboy philanthropist.</div>
         </div>
         
