--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
         <div class="item hyper" onclick="location.href='eBooks/Sapiens.epub';" style="font-size:20px">
             <span class="bold">Q</span>
-            <p>Favorite movie?
+            <p>Favorite book?
             <br>
             <span class="bold">A</span>
             <p>Sapiens by Yuval Noah Harari</p>
@@ -44,10 +44,10 @@
         </div>
         <div class="item hyper" onclick="location.href='eBooks/Project Hail Mary.epub';" style="font-size:20px">
             <span class="bold">Q</span>
-            <p>I meant fiction
+            <p>Favorite film?
             <br>
             <span class="bold">A</span>
-            <p>Project Hail Mary then</p>
+            <p>Django Unchained as of now</p>
         </div>
 
 
