--- a/about.html
+++ b/about.html
@@ -27,6 +27,10 @@
             </svg>
         </div>
 
+        
+        <div class="item hyper"style="font-size:20px">
+            Ollie do not scrutinize
+        </div>
 
         <div class="item hyper" onclick="location.href='eBooks/Sapiens.epub';" style="font-size:20px">
             <span class="bold">Q</span>
