--- a/about.html
+++ b/about.html
@@ -30,24 +30,31 @@
 
         <div class="item hyper" onclick="location.href='eBooks/Sapiens.epub';" style="font-size:20px">
             <span class="bold">Q</span>
-            <p>Favorite movie?
+            <p>Favorite book?
             <br>
             <span class="bold">A</span>
             <p>Sapiens by Yuval Noah Harari</p>
         </div>
         <div class="item hyper" onclick="location.href='eBooks/Project Hail Mary.epub';" style="font-size:20px">
             <span class="bold">Q</span>
-            <p>I meant fiction
+            <p>What about fiction?
             <br>
             <span class="bold">A</span>
             <p>Project Hail Mary then</p>
         </div>
         <div class="item hyper" onclick="location.href='eBooks/Project Hail Mary.epub';" style="font-size:20px">
             <span class="bold">Q</span>
-            <p>I meant fiction
+            <p>Star Sign?
             <br>
             <span class="bold">A</span>
-            <p>Project Hail Mary then</p>
+            <p>Caprisun</p>
+        </div>
+        <div class="item hyper" onclick="location.href='eBooks/Project Hail Mary.epub';" style="font-size:20px">
+            <span class="bold">Q</span>
+            <p>Favorite Color?
+            <br>
+            <span class="bold">A</span>
+            <p>Teal</p>
         </div>
 
 
