--- a/about.html
+++ b/about.html
@@ -28,9 +28,6 @@
         </div>
 
         
-        <div class="item hyper"style="font-size:20px">
-            Ollie do not scrutinize
-        </div>
 
         <div class="item hyper" onclick="location.href='eBooks/Sapiens.epub';" style="font-size:20px">
             <span class="bold">Q</span>
@@ -62,10 +59,18 @@
         </div>
 
         <div class="item hyper" onclick="location.href='eBooks/Project Hail Mary.epub';" style="font-size:20px">
+            <span class="bold">Q</span>
+            <p>Spirit Animal?
+            <br>
+            <span class="bold">A</span>
+            <p>Sapiens Sapiens</p>
+        </div>
+
+        <div class="item hyper" onclick="location.href='eBooks/Project Hail Mary.epub';" style="font-size:20px">
             <p>Favorite film?
             <br>
             <span class="bold">A</span>
-            <p>Django Unchained as of now</p>
+            <p>Currently Django Unchained</p>
         </div>
 
 
