--- a/dump.html
+++ b/dump.html
@@ -41,7 +41,11 @@ grid-template-areas:
     background-color: powderblue;
 
 
-
+    <div class="portfolio"
+    onclick="location.href='https://lightroom.adobe.com/shares/27efdc97d308470593e073f9ab61f97b'">
+    <image class="thumbnail" src="https://lightroom.adobe.com/v2c/spaces/27efdc97d308470593e073f9ab61f97b/assets/16ec0d8bc3354b44825c372b476b6cb3/revisions/5bedd24608f047dd85cc4f1426495c86/renditions/329d9dc3751ee91f25aab843390dfa76"></image>
+    words
+</div>
 
 
 
